welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
setCouleurBrosse(Color.magenta)
avance()
gauche()
baisseBrosse()
avance()
avance()
avance()
avance()
avance()
droite()
avance()
avance()
avance()
avance()
droite()
avance()
avance()
droite()
avance()
avance()
avance()
droite()
droite()
avance()
avance()
avance()
droite()
avance()
avance()
avance()



}
